# smart-meet

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .venv_aliases  .yamllint  ACTUAL_IMPLEMENTATION_STATUS.md  AGENT_DEVELOPMENT_RULES.md  CHANGELOG.md  CLAUDE.md  CLAUDE_NAVIGATION.md  DAY_BASED_WORKTREE_GUIDE.md  DEPENDENCY_SEPARATION.md  Dockerfile  Dockerfile.simple  GIT_ADHERENCE_ANALYSIS.md  GIT_WORKFLOW_ENFORCEMENT_ANALYSIS.md  IMPLEMENTATION_FOCUS.md  IMPLEMENTATION_GUIDE.md  MODERNIZATION_SUMMARY.md  Makefile  Makefile.testing  PACKAGE_STRUCTURE.md  POETRY_USAGE.md  README.md  READY_TO_START.md  SETUP_STATUS_SUMMARY.md  TASK_COMPLETION_CHECKLIST.md  TASK_COMPLETION_CHECKLIST_UPDATED.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  VENV_REFERENCE.md  WORKTREE_COORDINATION_GUIDE.md  WORKTREE_QUICKSTART.md  WSL_GUIDE.md  __init__.py  activate.sh  docker-compose-simple.yml  docker-compose.yml  (+41 more)
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  dependency-update.yml  security.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: agent_implementation_guidelines.md  api_endpoints_documentation.md  comprehensive_file_structure_status.md  consolidated_implementation_strategy.md  conversation_state_refine_setup.md  critical_setup_actions_remaining.md  current_implementation_status_major_update.md  database_setup_guide.md  documentation_final_alignment_complete.md  enhanced_database_schema.md  memory_consolidation_plan.md  memory_pruning_action_plan.md  phase1_implementation_tasks.md  phase2_cognitive_algorithms_complete.md  phase3_implementation_tasks.md  phase3_implementation_tasks_consolidated.md  phase3_implementation_tasks_detailed.md  phase4_implementation_tasks.md  phase5_implementation_tasks.md  progress_update_format.md  project_architecture_patterns.md  project_setup_status_enhanced.md  structured_development_workflow.md  task_completion_checklist.md  task_management_best_practices.md  task_organization_single_source_truth.md  tech_stack.md  technical_development_strategy.md  testing_verification_results.md  todo_to_task_mapping_plan.md
config/: default.yaml
docs/: AGENT_START_HERE.md  DEVELOPMENT_SETUP.md  GIT_WORKFLOW.md  QUICK_REFERENCE.md  QUICK_START_VISIBILITY.md  TASK_TRACKING_SYSTEM.md  TESTING_QUICK_START.md  TESTING_STRATEGY.md  architecture.md  technical-implementation.md
docs/architecture/: system-overview.md  vector-architecture.md
docs/archive/: SETUP_STATUS_SUMMARY.md
docs/progress/: 000_initial_setup.md  001_task_consolidation.md  002_documentation_alignment.md  004_todo_task_mapping.md  006_day_1_2_implementation_complete.md  007_day_1_2_objectives_verification.md  008_actual_implementation_status.md  009_phase2_cognitive_system_complete.md
docs/templates/: progress_documentation_template.md
scripts/: check_commit_msg.py  check_project_state.py  download_model.py  download_onnx_model.py  init_db.py  init_db_automated.py  init_qdrant.py  init_qdrant_simple.py  setup_all.py  setup_dev_env.sh  setup_directories.py  setup_git_hooks.py  setup_model.py  verify_db.py
scripts/.claude/: settings.local.json
src/: __init__.py
src/api/: cognitive_api.py  dependencies.py  main.py
src/api/routers/: __init__.py  bridges.py  cognitive.py  memories.py
src/cli/: cognitive_cli.py
src/cognitive/: PHASE2_EXAMPLES_README.md  __init__.py
src/cognitive/activation/: __init__.py  basic_activation_engine.py  engine.py
src/cognitive/bridges/: engine.py
src/cognitive/consolidation/: engine.py
src/cognitive/encoding/: __init__.py  enhanced_cognitive_encoder.py
src/cognitive/memory/: __init__.py  dual_memory_system.py
src/cognitive/retrieval/: __init__.py  bridge_discovery.py  contextual_retrieval.py  similarity_search.py
src/cognitive/storage/: __init__.py  enhanced_sqlite.py  hierarchical_qdrant.py
src/core/: config.py
src/embedding/: __init__.py  engine.py  onnx_encoder.py  vector_manager.py  vector_validation.py
src/extraction/: engine.py  memory_extractor.py
src/extraction/dimensions/: __init__.py  analyzer.py  causal.py  causal_extractor.py  dimension_analyzer.py  dimension_cache.py  emotional.py  emotional_extractor.py  evolutionary.py  evolutionary_extractor.py  extractor.py  social.py  social_extractor.py  temporal.py  temporal_extractor.py
src/pipeline/: ingestion.py  ingestion_pipeline.py
src/storage/qdrant/: vector_store.py
src/storage/sqlite/: __init__.py  connection.py  memory_repository.py  repositories.py  schema.sql  sql_repositories.py
tests/: conftest.py  conftest_comprehensive.py  test_api_basic.py
tests/integration/: test_bridge_discovery.py  test_cognitive_pipeline.py  test_cognitive_pipeline_comprehensive.py  test_cognitive_search.py  test_ingestion_pipeline.py  test_phase1_complete.py  test_sqlite_repositories.py
tests/performance/: test_performance_requirements.py
tests/unit/: test_dimension_extractors.py  test_dimensions.py  test_embedding_engine.py  test_encoder.py  test_memory_extractor.py  test_models.py  test_onnx_encoder.py  test_repositories.py  test_vector_manager.py
tests/unit/cognitive/: __init__.py  test_activation_engine.py  test_bridge_discovery.py
tests/unit/embedding/: __init__.py  test_vector_validation.py
tests/unit/extraction/: __init__.py  test_dimension_analyzer.py  test_emotional_extractor.py  test_temporal_extractor.py  test_temporal_extractor_comprehensive.py
ui/: index.html
worktree-tests/: .coveragerc  Dockerfile  IMPLEMENTATION_GUIDE.md  PROJECT_STATUS_DAY1_END.md  README_PHASE1.md  pyproject.toml  requirements-model.txt  tox.ini
worktree-tests/.claude/: settings.local.json
worktree-tests/.github/workflows/: release.yml
worktree-tests/.serena/memories/: code_style_conventions.md  current_project_state.md  (+10 more)
worktree-tests/docs/: AGENT_START_HERE.md  TASK_TRACKING_USAGE_GUIDE.md
worktree-tests/scripts/: init_db_automated.py  init_qdrant.py  setup_dev_env.sh  verify_db.py
worktree-tests/tests/: conftest.py
(+29 files in other folders)
