[metadata]
name = cognitive-meeting-intelligence
version = 2.0.0
description = Cognitive memory system for organizational meetings
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi==0.109.0
    uvicorn[standard]==0.27.0
    pydantic==2.5.0
    qdrant-client==1.7.0
    sqlalchemy==2.0.25
    onnxruntime==1.16.3
    sentence-transformers==2.2.2
    numpy==1.26.3
    scikit-learn==1.4.0
    nltk==3.8.1
    vaderSentiment==3.3.2

[options.packages.find]
where = src

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
